# CustomerChurn_Udacity

./: README.md  churn_library.py  churn_notebook.ipynb  churn_script_logging_and_tests.py  config.yaml  pyproject.toml  requirements_py3.8.txt  test_config.yaml
.ipynb_checkpoints/: churn_notebook-checkpoint.ipynb
ProjectFiles/: README.md  churn_library.py  churn_notebook.ipynb  config.yaml  pyproject.toml  requirements_py3.6.txt
ProjectFiles/images/results/: results.txt
ProjectFiles/models/: logistic_model.pkl  rfc_model.pkl
images/results/: logistic_regression_results.txt  random_forest_results.txt
models/: logistic_model.pkl
